# festival-coordinator

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  bot.py  cartesia-voices.json  cartesia.toml  db.py  docker-compose.yml  main.py  pyproject.toml  schema.sql  seed.sql  tools.py
.cartesia/: config.toml
backend/: database.py  main.py  models.py  orm_models.py
browserbase-client/: .env.example  index.ts  scraper.ts  tsconfig.json
browserbase-client/festivals/: edc.ts  tomorrowland.ts
browserbase-client/my-stagehand-app/: README.md  package-lock.json  package.json  scraper.ts  sync-supabase.ts
browserbase-client/my-stagehand-app/festivals/: coachella.ts  index.ts  tomorrowland.ts
browserbase-client/my-stagehand-app/output/: coachella-2026.csv  coachella-2026.json  tomorrowland-2026.csv
browserbase-client/output/: edc_lineup_2026.csv  edc_lineup_2026.json  tomorrowland-2026.json
client/: package.json  pnpm-lock.yaml  scrape-tomorrowland.mjs  tomorrowland-lineup-2026-07-17.csv  tomorrowland-lineup-2026-07-17.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  festival-catalog.ts  festivals.ts  groups.ts  members.ts  types.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: catalog-page.tsx  group-detail-page.tsx  home-page.tsx
migrations/: 001_add_transcript_to_calls.sql  002_add_phone_to_members.sql  003_add_execute_readonly_query.sql  003_add_festival_catalog.sql  003_add_status_and_description.sql  003b_seed_festival_catalog.sql
scripts/: init.sql
(+12 files in other folders)
