[project]
name = "voice-agent-researcher"
version = "0.1.0"
description = "Voice agent researcher"
requires-python = ">=3.12"
dependencies = [
    "pipecat-ai[webrtc,anthropic,daily,silero,cartesia,local-smart-turn-v3,runner]",
    "pipecat-ai-cli"
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]